--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
                 <input class="h-full outline-none rounded-[4px]  bg-[#ECF5F8] px-[14px]" type="text"
                     placeholder="Search for news..">
                 <figure class="size-[24px] cursor-pointer">
-                    <img src="./assets/img/search.svg" alt="">
+                    <a href="./news.html">
+                        <img src="./assets/img/search.svg" alt="">
+                    </a>
                 </figure>
             </div>
             <div
