--- a/news.html
+++ b/news.html
@@ -158,251 +158,19 @@
                 </figure>
             </div>
         </div>
-        <div class="flex gap-x-[45px]">
-            <div class="w-full">
-                <h1 class="font-bold text-[20px] text-[#072D4B] mb-[22px]">Leak: Samsung to announce the Z Fold 3 and Galaxy Watch 4 in August</h1>
-               <section class="mt-[14px] mb-[32px] text-[17px] text-[#072D4B60]">
-                <div class="flex gap-x-[9px] mb-[21px]">
-                    <a class="text-[12px] leading-[14px] py-[4px] px-[11px] bg-[#2F9FF820] rounded-[4px] text-[#2F9FF8]" href="#">Tech</a>
-                    <a class="text-[12px] leading-[14px] py-[4px] px-[11px] bg-[#2F9FF820] rounded-[4px] text-[#2F9FF8]" href="#">Mobile</a>
-                </div>
-                <p class="leading-[20px] mb-[35px]">Samsung's next Unpacked event reportedly lands August 11</p>
-                <figure class="w-full mb-[38px]">
-                    <img class="size-full object-contain" src="./assets/img/samsung.png" alt="">
-                </figure>
-                <div class="space-y-[28px] leading-[28px] mb-[35px]">
-                    <p>Samsung had a pretty quiet Mobile World Congress event, but it did tell us we’d learn more about its upcoming Google-approved smartwatch at its next Unpacked event. Unfortunately, the company didn’t tell us when exactly that would be, but a new report from Korean publication DigitalDaily News (via 9to5Google) claims the next Unpacked will take place on August 11, at 10 AM ET.
-                    </p>
-                    <div>
-                        <p class="mb-[10px]">According to the report, Samsung will be launching five devices at the event:
-                        </p>
-                        <div>
-                            <div class="flex items-center gap-x-[17px]">
-                                <div class="size-[13px] bg-[#2F9FF8]"></div>
-                                <p class="leading-[40px]">Galaxy Z Fold 3
-                                </p>
-                            </div>
-                            <div class="flex items-center gap-x-[17px]">
-                                <div class="size-[13px] bg-[#2F9FF8]"></div>
-                                <p class="leading-[40px]">Galaxy Z Fold 3
-                                </p>
-                            </div>
-                            <div class="flex items-center gap-x-[17px]">
-                                <div class="size-[13px] bg-[#2F9FF8]"></div>
-                                <p class="leading-[40px]">Galaxy Z Fold 3
-                                </p>
-                            </div>
-                            <div class="flex items-center gap-x-[17px]">
-                                <div class="size-[13px] bg-[#2F9FF8]"></div>
-                                <p class="leading-[40px]">Galaxy Z Fold 3
-                                </p>
-                            </div>
-                            <div class="flex items-center gap-x-[17px]">
-                                <div class="size-[13px] bg-[#2F9FF8]"></div>
-                                <p class="leading-[40px]">Galaxy Z Fold 3
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <p class="leading-[28px]">Notably, the new Galaxy Watches will be Samsung’s first to not use Tizen OS. Google collaborated with Samsung to revamp Wear OS from the ground up, making it smoother and more efficient.</p>
-                    <p class="leading-[28px]">Hopefully, the devices are able to maintain the long battery life Samsung’s smartwatches have been known for, while having much greater compatibility with smartwatch apps via Wear OS. That said, the watch will use a custom One UI Watch skin — because it wouldn’t be Samsung if it didn’t put its own twist on the software.</p>
-                    <p class="leading-[28px]">As for the Z Fold 3, it’s expected to be a refinement of the original Fold’s concept without major changes to the form factor. The biggest change aside from the expected spec bump is that the Z Fold 3 will support the S-Pen.</p>
-                    <p class="leading-[28px]">The event will reportedly be broadcast via YouTube, as per usual, and there is no indication the company plans to hold a concurrent physical event. With the rumored date a little over a month away, I’d expect an official announcement from Samsung within the next week or two.</p>
-                </div>
-                <p class="flex justify-center text-[12px] opacity-30 leading-[28px]">Published July 5, 2021 - 8:16 pm IST</p>
-                <p class="flex justify-center text-[12px] text-[#072D4B] mb-[15px] leading-[28px]">by John Abraham</p>
-                <a class="flex justify-center text-[12px] leading-[28px] text-[#2F9FF8] underline" href="./news.html">Back to top</a>
-
-               </section>
-               <section class="mb-[56px]">
-                <div class="flex items-center gap-x-[13px] mb-[10px]">
-                    <h2 class="font-bold text-[17px] text-[#072D4B] leading-[20px]">Add your comment</h2>
-                    <hr class="bg-gray-200 grow">
-                </div>
-                <textarea class="w-full h-[96px] bg-[#ECF5F8] rounded-[4px] mb-[11px] px-[18px] py-[12px]" placeholder="Enter your comment here.."></textarea>
-                <div class="mb-[20px] ">
-                    <button class="py-[10px] px-[30px] rounded-[4px] text-[15px] text-white bg-[#2F9FF8]">Post Comments</button>
-                </div>
-                <div class="mb-[50px]">
-                    <button class="font-medium text-[17px] leading-[20px] text-[#2F9FF8] flex items-center">
-                        <span class="underline">View All Comments</span>
-                        <span class="mr-[14px]">(04)</span>
-                        <span class="size-[24px] rounded-full bg-[#2F9FF8] text-[white] border border-white inline-flex justify-center items-center">
-                            <i class="text-[8px] text-white fa-solid fa-chevron-down"></i>
-                        </span>
-                    </button>
-                </div>
-                <div class="flex justify-between items-center w-full px-[24px] py-[15px] h-[140px] rounded-[4px] bg-[#FFE8C5] mb-[56px]">
-                    <div>
-                        <p class="mb-[13px] font-bold text-[15px] leading-[18px] text-[#072D4B]">Subscribe to our newsletter</p>
-                        <div class="flex items-center gap-x-[13px]">
-                            <input class="outline-none rounded-[4px] bg-[#FFF5E5] py-[11px] px-[13px]" placeholder="Enter Email" type="text">
-                            <button></button>
-                        </div>
-                    </div>
-                    <figure class="w-[170px] h-[110px]">
-                        <img class="size-full object-cover" src="./assets/img/newsletter.png" alt="">
-                    </figure>
-                </div>
-                </section>
-                <section>
-                    <div class="flex items-center gap-x-[13px] mb-[14px]">
-                        <h2 class="font-bold text-[15px] text-[#072D4B] leading-[18px]">More News for you</h2>
-                        <hr class="grow bg-gray-200">
-                    </div>
-                    <div class="grid grid-cols-2 gap-[20px]">
-                        <div class="flex flex-col justify-between rounded-[4px] shadow-sm px-[18px] py-[16px] bg-white">
-                            <div class="flex justify-between mb-[8px]">
-                                <div class="w-full">
-                                    <h2 class="font-medium text-[17px] text-[#072D4B] mb-[9px]">Battlegrounds Mobile India
-                                        iOS release date</h2>
-                                    <p class="text-[14px] text-[#072D4B60]">The reason behind their disappointment is that
-                                        iPhone users have been.. </p>
-                                </div>
-                                <figure class="size-[132px] shrink-0">
-                                    <img class="size-full" src="./assets/img/pubg.jpg" alt="">
-                                </figure>
-                            </div>
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-center gap-x-[9px]">
-                                    <span class="text-[12px] text-[#072D4B40]">Sport Biz</span>
-                                    <div class="size-[2px] rounded-full bg-[#2F9FF840]"></div>
-                                    <span class="text-[12px] text-[#072D4B40]">42 mins ago</span>
-                                </div>
-                                <div class="flex items-center gap-x-[25px]">
-                                    <div class="flex items-center cursor-pointer">
-                                        <figure class="mr-[8px]">
-                                            <img src="./assets/img/share.svg" alt="">
-                                        </figure>
-                                        <span class="text-[12px] text-[#0768B5]">Share</span>
-                                    </div>
-                                    <div class="flex items-center cursor-pointer">
-                                        <figure class="mr-[8px]">
-                                            <img src="./assets/img/pocket.svg" alt="">
-                                        </figure>
-                                        <span class="text-[12px] text-[#0768B5]">Read Later</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="flex flex-col justify-between rounded-[4px] shadow-sm px-[18px] py-[16px] bg-white">
-                            <div class="flex justify-between mb-[8px]">
-                                <div class="w-full">
-                                    <h2 class="font-medium text-[17px] text-[#072D4B] mb-[9px]">Battlegrounds Mobile India
-                                        iOS release date</h2>
-                                    <p class="text-[14px] text-[#072D4B60]">The reason behind their disappointment is that
-                                        iPhone users have been.. </p>
-                                </div>
-                                <figure class="size-[132px] shrink-0">
-                                    <img class="size-full" src="./assets/img/pubg.jpg" alt="">
-                                </figure>
-                            </div>
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-center gap-x-[9px]">
-                                    <span class="text-[12px] text-[#072D4B40]">Sport Biz</span>
-                                    <div class="size-[2px] rounded-full bg-[#2F9FF840]"></div>
-                                    <span class="text-[12px] text-[#072D4B40]">42 mins ago</span>
-                                </div>
-                                <div class="flex items-center gap-x-[25px]">
-                                    <div class="flex items-center cursor-pointer">
-                                        <figure class="mr-[8px]">
-                                            <img src="./assets/img/share.svg" alt="">
-                                        </figure>
-                                        <span class="text-[12px] text-[#0768B5]">Share</span>
-                                    </div>
-                                    <div class="flex items-center cursor-pointer">
-                                        <figure class="mr-[8px]">
-                                            <img src="./assets/img/pocket.svg" alt="">
-                                        </figure>
-                                        <span class="text-[12px] text-[#0768B5]">Read Later</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="flex flex-col justify-between rounded-[4px] shadow-sm px-[18px] py-[16px] bg-white">
-                            <div class="flex justify-between mb-[8px]">
-                                <div class="w-full">
-                                    <h2 class="font-medium text-[17px] text-[#072D4B] mb-[9px]">Biden's cold response to
-                                        Afghanistan's collapse to have far consequences
-                                    </h2>
-                                    <p class="text-[14px] text-[#072D4B60]">When US President Joe Biden chose in April to
-                                        withdraw all American forces from Afghanistan by September, we were among those who
-                                        judged..</p>
-                                </div>
-                            </div>
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-center gap-x-[9px]">
-                                    <span class="text-[12px] text-[#072D4B40]">Sport Biz</span>
-                                    <div class="size-[2px] rounded-full bg-[#2F9FF840]"></div>
-                                    <span class="text-[12px] text-[#072D4B40]">42 mins ago</span>
-                                </div>
-                                <div class="flex items-center gap-x-[25px]">
-                                    <div class="flex items-center cursor-pointer">
-                                        <figure class="mr-[8px]">
-                                            <img src="./assets/img/share.svg" alt="">
-                                        </figure>
-                                        <span class="text-[12px] text-[#0768B5]">Share</span>
-                                    </div>
-                                    <div class="flex items-center cursor-pointer">
-                                        <figure class="mr-[8px]">
-                                            <img src="./assets/img/pocket.svg" alt="">
-                                        </figure>
-                                        <span class="text-[12px] text-[#0768B5]">Read Later</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="flex flex-col justify-between rounded-[4px] shadow-sm px-[18px] py-[16px] bg-white">
-                            <div class="flex justify-between mb-[8px]">
-                                <div class="w-full">
-                                    <h2 class="font-medium text-[17px] text-[#072D4B] mb-[9px]">Battlegrounds Mobile India
-                                        iOS release date</h2>
-                                    <p class="text-[14px] text-[#072D4B60]">The reason behind their disappointment is that
-                                        iPhone users have been.. </p>
-                                </div>
-                                <figure class="size-[132px] shrink-0">
-                                    <img class="size-full" src="./assets/img/pubg.jpg" alt="">
-                                </figure>
-                            </div>
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-center gap-x-[9px]">
-                                    <span class="text-[12px] text-[#072D4B40]">Sport Biz</span>
-                                    <div class="size-[2px] rounded-full bg-[#2F9FF840]"></div>
-                                    <span class="text-[12px] text-[#072D4B40]">42 mins ago</span>
-                                </div>
-                                <div class="flex items-center gap-x-[25px]">
-                                    <div class="flex items-center cursor-pointer">
-                                        <figure class="mr-[8px]">
-                                            <img src="./assets/img/share.svg" alt="">
-                                        </figure>
-                                        <span class="text-[12px] text-[#0768B5]">Share</span>
-                                    </div>
-                                    <div class="flex items-center cursor-pointer">
-                                        <figure class="mr-[8px]">
-                                            <img src="./assets/img/pocket.svg" alt="">
-                                        </figure>
-                                        <span class="text-[12px] text-[#0768B5]">Read Later</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <hr class="text-[#072D4B] mt-[54px] mb-[23px]">
-                <div class="flex items-center justify-between mb-[23px] text-[12px] text-[#072D4B40]">
-                    <span>© Aster News, 2022</span>
-                    <div class="flex gap-x-[38px]">
-                        <a href="#">Privacy Policy</a>
-                        <a href="#">Terms of Service</a>
-                    </div>
+        <footer>
+            <hr class="text-[#072D4B] mt-[54px] mb-[23px]">
+            <div class="flex items-center justify-between mb-[23px] text-[12px] text-[#072D4B40]">
+                <span>© Aster News, 2022</span>
+                <div class="flex gap-x-[38px]">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Service</a>
                 </div>
             </div>
-
-
-        </div>
+        </footer>
     </main>
-    <aside class="sticky top-0 py-[15px] h-[1100px]">
-        <div class="flex items-center justify-between min-w-[156px] h-[24px] mb-[115px] rounded-[1px] cursor-pointer">
+    <aside class="sticky top-0 py-[15px] h-[1100px] pr-[15px]">
+        <div class="flex items-center justify-end gap-x-[35px] min-w-[156px] h-[24px] mb-[115px] rounded-[1px] cursor-pointer">
             <div class="flex items-center gap-x-[13px]">
                 <figure class="size-[24px]">
                     <img src="./assets/img/user.svg" alt="">
@@ -426,11 +194,7 @@
                     <div class="">
                         <p class="text-[15px]">Sunny</p>
                         <div class="flex items-center">
-                            <span class="font-bold text-[26px]">31</span>
-                            <div>
-                                <span class="text-[15px]">*</span>
-                            </div>
-                            <span class="font-bold text-[26px]">c</span>
+                            <span class="font-bold text-[26px]">31<sup>o</sup>c</span>
                         </div>
                     </div>
                     <figure class="size-[52px]">
