--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <aside class="sticky top-0 w-[260px] h-[900px] flex flex-col justify-between py-[21px] pr-[17px]">
         <nav>
             <div class="relative flex items-center mb-[28px] px-[31px]">
-                <a class="absolute inset-0" href="./index.html"></a>
+                <a class="absolute inset-0" href="#home"></a>
                 <figure class="mr-[15px] w-[29px] h-[35px]">
                     <img class="h-full w-full object-cover" src="./assets/img/logo.png" alt="">
                 </figure>
@@ -45,7 +45,7 @@
                     <span>Top Stories</span>
                 </div>
                 <div
-                    class="flex items-center relative px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-100 text-[15px] font-bold">
+                    class="flex items-center relative px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
                     <a class="absolute inset-0" href="#"></a>
                     <figure class="mr-[22px] size-[24px]">
                         <img src="./assets/img/globe.svg" alt="">
@@ -53,7 +53,7 @@
                     <span>Around the World</span>
                 </div>
                 <div
-                    class="flex items-center relative px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-100 text-[15px] font-bold">
+                    class="flex items-center relative px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
                     <a class="absolute inset-0" href="#"></a>
                     <figure class="mr-[22px] size-[24px]">
                         <img src="./assets/img/briefcase.svg" alt="">
@@ -61,7 +61,7 @@
                     <span>Business</span>
                 </div>
                 <div
-                    class="flex items-center relative px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-100 text-[15px] font-bold">
+                    class="flex items-center relative px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
                     <a class="absolute inset-0" href="#"></a>
                     <figure class="mr-[22px] size-[24px]">
                         <img src="./assets/img/activity.svg" alt="">
@@ -71,7 +71,7 @@
             </div>
             <div class=" border-t border-b pt-[7px] pb-[3px] mb-[23px]">
                 <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-100 text-[15px] font-bold">
+                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
                     <a class="absolute inset-0" href="#"></a>
                     <figure class="mr-[22px] size-[24px]">
                         <img src="./assets/img/shield.svg" alt="">
@@ -81,7 +81,7 @@
             </div>
             <div class="pt-[7px] pb-[3px] mb-[23px]">
                 <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-100 text-[15px] font-bold">
+                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
                     <a class="absolute inset-0" href="#"></a>
                     <figure class="mr-[22px] size-[24px]">
                         <img src="./assets/img/play-circle.svg" alt="">
@@ -89,7 +89,7 @@
                     <span>Entertainment</span>
                 </div>
                 <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-100 text-[15px] font-bold">
+                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
                     <a class="absolute inset-0" href="#"></a>
                     <figure class="mr-[22px] size-[24px]">
                         <img src="./assets/img/award.svg" alt="">
@@ -97,7 +97,7 @@
                     <span>Sports</span>
                 </div>
                 <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-100 text-[15px] font-bold">
+                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
                     <a class="absolute inset-0" href="#"></a>
                     <figure class="mr-[22px] size-[24px]">
                         <img src="./assets/img/message-circle.svg" alt="">
@@ -105,7 +105,7 @@
                     <span>Discussion</span>
                 </div>
                 <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-100 text-[15px] font-bold">
+                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
                     <a class="absolute inset-0" href="#"></a>
                     <figure class="mr-[22px] size-[24px]">
                         <img src="./assets/img/bell.svg" alt="">
@@ -113,7 +113,7 @@
                     <span>Notification</span>
                 </div>
                 <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-100 text-[15px] font-bold">
+                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
                     <a class="absolute inset-0" href="#"></a>
                     <figure class="mr-[22px] size-[24px]">
                         <img src="./assets/img/settings.svg" alt="">
@@ -144,7 +144,7 @@
                 <input class="h-full outline-none rounded-[4px]  bg-[#ECF5F8] px-[14px]" type="text"
                     placeholder="Search for news..">
                 <figure class="size-[24px] cursor-pointer">
-                    <a href="./news.html">
+                    <a href="#">
                         <img src="./assets/img/search.svg" alt="">
                     </a>
                 </figure>
@@ -157,7 +157,14 @@
                 </figure>
             </div>
         </div>
-        <div id="root"></div>
+        <div>
+            <div id="root"></div>
+            <div id="loading" class="h-screen flex justify-center items-center bg-[#F4F9F8]" style="display: none;">
+                <figure class="size-[100px]">
+                    <img class="size-full" src="./assets/img/loading.svg" alt="">
+                </figure>
+            </div>
+        </div>
         <footer>
             <hr class="text-[#072D4B] mb-[23px]">
             <div class="flex items-center justify-between mb-[23px] text-[12px] text-[#072D4B40]">
@@ -265,6 +272,7 @@
         </div>
     </aside>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script type="module" src="./assets/js/script.js"></script>
 </body>
 
