--- a/pages/home.html
+++ b/pages/home.html
@@ -4,6 +4,10 @@
         <section class="grid grid-cols-2 gap-[15px] mb-[44px]" id="news-content">
           
         </section>
+        <div class="flex justify-center  mt-[44px] mb-[79px]">
+            <button id="show_more" data-page="1" class=" rounded-[4px] h-[38px] px-[21px] text-[15px] text-[#072D4B] border hover:border-gray-300">Show
+                More</button>
+        </div>
         <section class="mb-[44px]">
             <div class="flex items-center justify-between mb-[12px]">
                 <div class="flex items-center">
@@ -75,7 +79,7 @@
                 </div>
             </div>
         </section>
-        <section class="grid grid-cols-2 gap-[20px]">
+        <!-- <section class="grid grid-cols-2 gap-[20px]">
             <div class="flex flex-col justify-between rounded-[4px] shadow-sm px-[18px] py-[16px] bg-white">
                 <div class="flex justify-between mb-[8px]">
                     <div class="w-full">
@@ -211,11 +215,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <div class="flex justify-center  mt-[44px] mb-[79px]">
-            <button class=" rounded-[4px] h-[38px] px-[21px] text-[15px] text-[#072D4B] border">Show
-                More</button>
-        </div>
-        
+        </section> -->       
     </div>
 </div>
