--- a/pages/view.html
+++ b/pages/view.html
@@ -1,57 +1,21 @@
 <div class="flex gap-x-[45px]">
     <div class="w-full">
-        <h1 class="font-bold text-[20px] text-[#072D4B] mb-[22px]">Leak: Samsung to announce the Z Fold 3 and Galaxy Watch 4 in August</h1>
-       <section class="mt-[14px] mb-[32px] text-[17px] text-[#072D4B60]">
+        <h1 id="title"class="font-bold text-[20px] text-[#072D4B] mb-[22px]"></h1>
+       <section class="mt-[14px] mb-[32px] text-[17px] text-[#072D4B80]">
         <div class="flex gap-x-[9px] mb-[21px]">
-            <a class="text-[12px] leading-[14px] py-[4px] px-[11px] bg-[#2F9FF820] rounded-[4px] text-[#2F9FF8]" href="#">Tech</a>
-            <a class="text-[12px] leading-[14px] py-[4px] px-[11px] bg-[#2F9FF820] rounded-[4px] text-[#2F9FF8]" href="#">Mobile</a>
+            <a href="#" id="category" class="text-[12px] leading-[14px] py-[4px] px-[11px] bg-[#2F9FF820] rounded-[4px] text-[#2F9FF8]"></a>
         </div>
-        <p class="leading-[20px] mb-[35px]">Samsung's next Unpacked event reportedly lands August 11</p>
         <figure class="w-full mb-[38px]">
-            <img class="size-full object-contain" src="./assets/img/samsung.png" alt="">
+            <img id="photo" class="size-full object-contain" src="" alt="">
         </figure>
-        <div class="space-y-[28px] leading-[28px] mb-[35px]">
-            <p>Samsung had a pretty quiet Mobile World Congress event, but it did tell us we’d learn more about its upcoming Google-approved smartwatch at its next Unpacked event. Unfortunately, the company didn’t tell us when exactly that would be, but a new report from Korean publication DigitalDaily News (via 9to5Google) claims the next Unpacked will take place on August 11, at 10 AM ET.
-            </p>
-            <div>
-                <p class="mb-[10px]">According to the report, Samsung will be launching five devices at the event:
-                </p>
-                <div>
-                    <div class="flex items-center gap-x-[17px]">
-                        <div class="size-[13px] bg-[#2F9FF8]"></div>
-                        <p class="leading-[40px]">Galaxy Z Fold 3
-                        </p>
-                    </div>
-                    <div class="flex items-center gap-x-[17px]">
-                        <div class="size-[13px] bg-[#2F9FF8]"></div>
-                        <p class="leading-[40px]">Galaxy Z Fold 3
-                        </p>
-                    </div>
-                    <div class="flex items-center gap-x-[17px]">
-                        <div class="size-[13px] bg-[#2F9FF8]"></div>
-                        <p class="leading-[40px]">Galaxy Z Fold 3
-                        </p>
-                    </div>
-                    <div class="flex items-center gap-x-[17px]">
-                        <div class="size-[13px] bg-[#2F9FF8]"></div>
-                        <p class="leading-[40px]">Galaxy Z Fold 3
-                        </p>
-                    </div>
-                    <div class="flex items-center gap-x-[17px]">
-                        <div class="size-[13px] bg-[#2F9FF8]"></div>
-                        <p class="leading-[40px]">Galaxy Z Fold 3
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <p class="leading-[28px]">Notably, the new Galaxy Watches will be Samsung’s first to not use Tizen OS. Google collaborated with Samsung to revamp Wear OS from the ground up, making it smoother and more efficient.</p>
-            <p class="leading-[28px]">Hopefully, the devices are able to maintain the long battery life Samsung’s smartwatches have been known for, while having much greater compatibility with smartwatch apps via Wear OS. That said, the watch will use a custom One UI Watch skin — because it wouldn’t be Samsung if it didn’t put its own twist on the software.</p>
-            <p class="leading-[28px]">As for the Z Fold 3, it’s expected to be a refinement of the original Fold’s concept without major changes to the form factor. The biggest change aside from the expected spec bump is that the Z Fold 3 will support the S-Pen.</p>
-            <p class="leading-[28px]">The event will reportedly be broadcast via YouTube, as per usual, and there is no indication the company plans to hold a concurrent physical event. With the rumored date a little over a month away, I’d expect an official announcement from Samsung within the next week or two.</p>
+        <div id="content" class="space-y-[28px] leading-[28px] mb-[35px]">
+            
         </div>
-        <p class="flex justify-center text-[12px] opacity-30 leading-[28px]">Published July 5, 2021 - 8:16 pm IST</p>
-        <p class="flex justify-center text-[12px] text-[#072D4B] mb-[15px] leading-[28px]">by John Abraham</p>
-        <a class="flex justify-center text-[12px] leading-[28px] text-[#2F9FF8] underline" href="./news.html">Back to top</a>
+        <div>   
+            <p id="published_date" class="flex justify-center text-[12px] opacity-70 leading-[28px]"></p>
+            <p id="author" class="flex justify-center text-[12px] text-[#072D4B] font-semibold mb-[15px] leading-[28px]"></p>
+            <a class="flex justify-center text-[12px] leading-[28px] text-[#2F9FF8] underline" href="#">Back to top</a>
+        </div>
 
        </section>
        <section class="mb-[56px]">
@@ -111,7 +75,7 @@
             </figure>
         </div>
         </section>
-        <section>
+        <!-- <section>
             <div class="flex items-center gap-x-[13px] mb-[14px]">
                 <h2 class="font-bold text-[15px] text-[#072D4B] leading-[18px]">More News for you</h2>
                 <hr class="grow bg-gray-200">
@@ -253,7 +217,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         
     </div>
 
